# dental

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.docs  README.md  STOMATOLOGY_CLINIC_SPEC.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  test_dental_bot.db
docs/: admin.md  architecture.md  clinic-spec.md  configuration.md  demo.md  deployment.md  getting-started.md  index.md  mentor-guide.md  mkdocs.md  security.md  testing.md  user-flows.md
docs/api/: callbacks.md  events.md  overview.md
docs/services/: ai-orchestrator.md  bot-gateway.md  core-api.md  crm-mock.md  worker.md
fly/admin/: fly.toml
fly/ai/: fly.toml
fly/bot/: fly.toml
fly/core/: fly.toml
fly/crm/: fly.toml
fly/docs/: fly.toml
fly/nats/: Dockerfile  fly.toml
fly/redis/: Dockerfile  fly.toml
fly/worker/: fly.toml
scripts/: fly_deploy.sh  init_nats.py  run_demo_scenario.py  send_telegram_notification.py  set_webhook.py  smoke_test.py
services/admin/: main.py
services/ai_orchestrator/: __init__.py  cks.py  main.py  safety.py
services/bot_gateway/: __init__.py  main.py  rendering.py
services/core_api/: __init__.py  admin.py  database.py  demo_reset.py  demo_scenario.py  main.py  models.py  seed.py
services/crm_mock/: __init__.py  main.py
shared/: __init__.py  callbacks.py  config.py  conversation_state.py  events.py  nats.py  notification_delivery.py  notification_text.py  patient_proof.py  schemas.py  security.py  service_auth.py  service_visits.py  startup_checks.py  telegram_client.py
tests/: conftest.py
(+21 files in other folders)
