[project]
name = "dental-telegram-bot-mvp"
version = "0.1.0"
description = "Hybrid Telegram bot MVP for a dental clinic with AI routing agents."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0",
    "aiohttp-socks>=0.9.0",
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "nats-py>=2.7.2",
    "pydantic-settings>=2.4.0",
    "psycopg[binary]>=3.2.1",
    "python-dotenv>=1.0.1",
    "redis>=5.0.7",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
